--- a/style.css
+++ b/style.css
@@ -1,3 +1,43 @@
+ /* posición, marco y tamaño*/
 .yo{
     float: left;
+    border: 3px solid #000;
+    padding: 5px;
+    display: inline-flex;
+}
+ /* pie de pagina: se le pone el color, entrado , tamaño, etc*/
+footer {
+    background-color: #f0f0f0;
+    padding: 20px;
+    text-align: center;
+    color: #666;
+  }
+  
+/* menu estatico*/
+/* styles.css */
+header {
+  background-color: #5a8ee9e4;
+  padding: 10px 0;
+}
+
+nav ul {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+  text-align: center;
+}
+
+nav li {
+  display: inline-block;
+  margin: 0 10px;
+}
+
+nav li a {
+  color: #fff;
+  text-decoration: none;
+  padding: 5px 10px;
+}
+
+nav li a:hover {
+  background-color: #98b4f1;
 }
