--- a/style.css
+++ b/style.css
@@ -4,6 +4,7 @@
     border: 3px solid #000;
     padding: 5px;
     display: inline-flex;
+    margin-top: 60px;
 }
  /* pie de pagina: se le pone el color, entrado , tamaño, etc*/
 footer {
@@ -41,3 +42,7 @@ nav li a {
 nav li a:hover {
   background-color: #98b4f1;
 }
+/* coloar el texto mas abajo*/
+.introduccion {
+    margin-top: 60px;
+  }
