--- a/style.css
+++ b/style.css
@@ -3,7 +3,6 @@
     float: left;
     border: 3px solid #000;
     padding: 5px;
-    display: inline-flex;
     margin-top: 180px;
 }
  /* pie de pagina: se le pone el color, entrado , tamaño, etc*/
@@ -47,8 +46,34 @@ nav li a:hover {
   }
 .titulo-principal {
     text-align:center;
+    font-family:monospace;
   }
 /*Color a la pagina web*/
 body {
     background-color: #bad9fb;
+    margin: 0;
   }
+
+/* Espacio entre las imágenes */
+.grado-img{
+    border: 3px solid #000;
+    padding: 5px;
+    display: inline-flex;
+    margin-top: 180px;
+  }
+
+.escudo-img{
+    border: 3px solid #000;
+    padding: 5px;
+    display: inline-flex;
+    margin-top: 180px;
+  }
+p {
+    text-align: center;
+    text-align: left;
+    max-width: 5000px;
+}
+
+main{
+    margin:0;
+}
