--- a/style.css
+++ b/style.css
@@ -1,9 +1,8 @@
  /* posición, marco y tamaño*/
 .yo{
     float: left;
-    border: 3px solid #000;
+    border: 1px solid #000;
     padding: 5px;
-    margin-top: 180px;
 }
  /* pie de pagina: se le pone el color, entrado , tamaño, etc*/
 footer {
@@ -62,6 +61,7 @@ body {
     margin-top: 180px;
   }
 
+
 .escudo-img{
     border: 3px solid #000;
     padding: 5px;
@@ -75,5 +75,16 @@ p {
 }
 
 main{
-    margin:0;
+    margin: 100px;
+    margin-top: 50px;
+}
+
+.texto{
+    text-align: justify;
+}
+
+/*agrande la letra del subtitulo*/
+.subtitulo{
+    font-family:monospace;
+    font-size: 200%;
 }
