--- a/style.css
+++ b/style.css
@@ -88,3 +88,10 @@ main{
     font-family:monospace;
     font-size: 200%;
 }
+
+.fotomia{
+    float: right;
+    border: 1px solid #000;
+    padding: 5px;
+    display: block;
+}
