--- a/style2.css
+++ b/style2.css
@@ -4,3 +4,30 @@
 h3 {
     font-family: monospace;
 }
+/* menu estatico*/
+header {
+    background-color: #5a8ee9e4;
+    padding: 30px 0;
+  }
+  
+  nav ul {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+    text-align: center;
+  }
+  
+  nav li {
+    display: inline-block;
+    margin: 0 10px;
+  }
+  
+  nav li a {
+    color: #fff;
+    text-decoration: none;
+    padding: 20px 40px;
+  }
+  
+  nav li a:hover {
+    background-color: #98b4f1;
+  }
