--- a/style.css
+++ b/style.css
@@ -95,6 +95,7 @@ main{
     border: 1px solid #000;
     padding: 5px;
     display: block;
+    margin: 1rem;
 }
 
 .imagen-escudo-jave{
@@ -119,3 +120,4 @@ main{
     text-align: justify;
     font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
+
