--- a/style2.css
+++ b/style2.css
@@ -1,5 +1,6 @@
 .titulo-principal {
     font-family: monospace;
+    text-align: center;
 }
 h3 {
     font-family: monospace;
@@ -42,14 +43,7 @@ body {
   }
   
 .texto-inicial{
-    text-align: left;
-    display: block;
-    font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-}
-.parte-dos-texto{
-    text-align: left;
-    text-align:justify;
-    display: block;
+    text-align: justify;
     font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
 
@@ -58,10 +52,11 @@ table {
     float: right;
     border-collapse: collapse; /* Fusiona los bordes de las celdas adyacentes */
     width: 20%; /* O el ancho deseado para la tabla */
+    margin: 1rem;
   }
   
   th, td {
-    border: 1px solid #ccc; /* Agrega bordes a las celdas */
+    border: 1px solid #0616a3; /* Agrega bordes a las celdas */
     padding: 8px; /* Espacio entre el contenido de la celda y el borde */
     text-align: left; /* Alineación del texto dentro de las celdas */
   }
@@ -69,3 +64,9 @@ table {
   th {
     background-color: #f2f2f2; /* Color de fondo para las celdas del encabezado */
   }
+.contenedor-tabla{
+  display: flex;
+  justify-content: center; /* Centrar horizontalmente */
+  align-items: center; /* Centrar verticalmente */
+  
+}
