--- a/style2.css
+++ b/style2.css
@@ -2,6 +2,14 @@
     font-family: monospace;
     text-align: center;
 }
+
+footer {
+  background-color: #bad9fb;
+  padding: 30px;
+  text-align: center;
+  color: #666;
+}
+
 h3 {
     font-family: monospace;
 }
