--- a/style3.css
+++ b/style3.css
@@ -1,3 +1,48 @@
+
+.titulo-principal{
+    font-family: monospace;
+    text-align: center;
+  }
+
+body {
+    background-color: #bad9fb;
+    margin: 0;
+  }
+
+/* menu estatico*/
+header {
+    background-color: #5a8ee9e4;
+    padding: 30px 0;
+  }
+  
+  nav ul {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+    text-align: center;
+  }
+  
+  nav li {
+    display: inline-block;
+    margin: 0 10px;
+  }
+  
+  nav li a {
+    color: #fff;
+    text-decoration: none;
+    padding: 20px 40px;
+  }
+  
+  nav li a:hover {
+    background-color: #98b4f1;
+  }
+
+.hoja-de-vida{
+    display: grid;
+    place-items: center;
+    height: 100%;
+}
+
 footer {
     background-color: #bad9fb;
     padding: 30px;
@@ -5,7 +50,7 @@ footer {
     color: #666;
   }
 
-  .titulo-principal{
-    font-family: monospace;
-    text-align: center;
-  }
+  main{
+    margin: 100px;
+    margin-top: 50px;
+}
