--- a/style3.css
+++ b/style3.css
@@ -54,3 +54,17 @@ footer {
     margin: 100px;
     margin-top: 50px;
 }
+
+.imagen-caseta{
+    float: right;
+    margin-right: 200px;
+  }
+
+  .imagen-escudo-jave{
+    float: right;
+    margin: 50px
+  }
+  
+  *{
+    font-family:Arial, Helvetica, sans-serif;
+  }
