--- a/style3.css
+++ b/style3.css
@@ -38,8 +38,8 @@ header {
   }
 
 .hoja-de-vida{
-    display: grid;
-    place-items: center;
+    float: right;
+    place-items: right;
     height: 100%;
 }
 
@@ -56,15 +56,16 @@ footer {
 }
 
 .imagen-caseta{
-    float: right;
-    margin-right: 200px;
+        margin: 50px;
   }
 
-  .imagen-escudo-jave{
-    float: right;
-    margin: 50px
-  }
   
   *{
     font-family:Arial, Helvetica, sans-serif;
+    text-align: center;
+    text-align: left;
+  }
+
+.secciones-subsecciones{
+    font-size: large;
   }
