--- a/style4.css
+++ b/style4.css
@@ -68,6 +68,10 @@ main{
     color:#ffffff
 }
 
+.aesthetic{
+    color:#ffffff
+}
+
 *{
     font-family:Arial, Helvetica, sans-serif;
     text-align: center;
