--- a/style4.css
+++ b/style4.css
@@ -72,6 +72,15 @@ main{
     color:#ffffff
 }
 
+.texto-quinto{
+    color:#ffffff
+}
+
+.arg{
+    float:right;
+    margin-right: 100px;
+}
+
 *{
     font-family:Arial, Helvetica, sans-serif;
     text-align: center;
