--- a/style4.css
+++ b/style4.css
@@ -91,3 +91,10 @@ main{
     float:right;
     margin-right: 400px;
   }
+
+  footer {
+    background-color: #000000;
+    padding: 30px;
+    text-align: center;
+    color: #666;
+  }
