--- a/style.css
+++ b/style.css
@@ -44,8 +44,10 @@ nav li a:hover {
     margin-top: 30px;
   }
 .titulo-principal {
-    text-align:center;
-    font-family:monospace;
+    border-bottom: 2px solid #007bff; /* Cambia el color del subrayado */
+    display: inline-block; /* Asegura que el subrayado solo se extienda hasta el final del título */
+    padding-bottom: 5px; 
+    font-size: 200%;
   }
 /*Color a la pagina web*/
 body {
@@ -88,6 +90,11 @@ main{
 .subtitulo{
     font-family:monospace;
     font-size: 200%;
+    text-align:center;
+    font-family:monospace;
+    border-bottom: 2px solid #007bff; /* Cambia el color del subrayado */
+    display: inline-block; /* Asegura que el subrayado solo se extienda hasta el final del título */
+    padding-bottom: 5px; 
 }
 
 .fotomia{
