--- a/style2.css
+++ b/style2.css
@@ -1,6 +1,10 @@
 .titulo-principal {
     font-family: monospace;
     text-align: center;
+    border-bottom: 2px solid #007bff; /* Cambia el color del subrayado */
+    display: inline-block; /* Asegura que el subrayado solo se extienda hasta el final del título */
+    padding-bottom: 5px; 
+    font-size: 200%;
 }
 
 footer {
@@ -53,6 +57,7 @@ body {
 .texto-inicial{
     text-align: justify;
     font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    
 }
 
 /*todo lo de la tabla */
