--- a/style3.css
+++ b/style3.css
@@ -2,6 +2,10 @@
 .titulo-principal{
     font-family: monospace;
     text-align: center;
+    border-bottom: 2px solid #007bff; /* Cambia el color del subrayado */
+    display: inline-block; /* Asegura que el subrayado solo se extienda hasta el final del título */
+    padding-bottom: 5px; 
+    font-size: 200%;
   }
 
 body {
