--- a/style3.css
+++ b/style3.css
@@ -1,6 +1,7 @@
+@import url('https://fonts.googleapis.com/css2?family=Inconsolata:wght@200;500&display=swap');
 
 .titulo-principal{
-    font-family: monospace;
+    font-family: 'Inconsolata', monospace;
     text-align: center;
     border-bottom: 2px solid #007bff; /* Cambia el color del subrayado */
     display: inline-block; /* Asegura que el subrayado solo se extienda hasta el final del título */
@@ -65,7 +66,7 @@ footer {
 
   
   *{
-    font-family:Arial, Helvetica, sans-serif;
+    font-family: 'Inconsolata', monospace;
     text-align: center;
     text-align: left;
   }
