--- a/style.css
+++ b/style.css
@@ -14,18 +14,30 @@ footer {
     text-align: center;
     color: #666;
   }
-  
-/* menu estatico*/
+/* styles.css */
+body {
+  margin: 0;
+  padding: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  min-height: 100vh;
+  background-color: #f0f0f0;
+}
+/*Menu estatico*/
 header {
   background-color: #5a8ee9e4;
-  padding: 30px 0;
+  padding: 20px 0;
+  position: fixed;
+  width: 100%;
+  top: 0;
+  text-align: center;
 }
 
 nav ul {
   list-style: none;
   margin: 0;
   padding: 0;
-  text-align: center;
 }
 
 nav li {
@@ -42,6 +54,7 @@ nav li a {
 nav li a:hover {
   background-color: #98b4f1;
 }
+
 /* coloar el texto mas abajo*/
 .introduccion {
     margin-top: 30px;
