--- a/style3.css
+++ b/style3.css
@@ -14,33 +14,36 @@ body {
     margin: 0;
   }
 
-/* menu estatico*/
+/*Menu estatico*/
 header {
-    background-color: #5a8ee9e4;
-    padding: 30px 0;
-  }
-  
-  nav ul {
-    list-style: none;
-    margin: 0;
-    padding: 0;
-    text-align: center;
-  }
-  
-  nav li {
-    display: inline-block;
-    margin: 0 10px;
-  }
-  
-  nav li a {
-    color: #fff;
-    text-decoration: none;
-    padding: 20px 40px;
-  }
-  
-  nav li a:hover {
-    background-color: #98b4f1;
-  }
+  background-color: #5a8ee9e4;
+  padding: 20px 0;
+  position: fixed;
+  width: 100%;
+  top: 0;
+  text-align: center;
+}
+
+nav ul {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+
+nav li {
+  display: inline-block;
+  margin: 0 10px;
+}
+
+nav li a {
+  color: #fff;
+  text-decoration: none;
+  padding: 20px 40px;
+}
+
+nav li a:hover {
+  background-color: #98b4f1;
+}
 
 .hoja-de-vida{
     float: right;
