--- a/style5.css
+++ b/style5.css
@@ -67,8 +67,10 @@ nav li a:hover {
     font-family: 'Inconsolata', monospace;
   }
   
+
   th {
-    background-color: #f2f2f2; /* Color de fondo para las celdas del encabezado */
+    background-color: #010018; /* Color de fondo para las celdas del encabezado */
+    color:#ffffff
   }
 
   footer {
